--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
     justify-content: center;
 }
 
-#search-result {
+#search-results {
     position: absolute;
     z-index: 10;
     /*background-color: #fff;*/
